--- a/index.html
+++ b/index.html
@@ -18,23 +18,21 @@
         <div class="container">
             <div class="slider-wrapper d-flex align-items-center" tabindex="0">
                 <!-- Pulsante sinistro -->
-                <button class="btn btn-primary me-3">Left</button>
-                
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                <button class="btn btn-primary me-3" @click="prevSlide"  >Left</button>
+
+                <div class="item" v-for="(slide, index) in slides" :key="index" v-show="index === activeIndex">
+
+                    <img :src="slide.image" :alt="slide.title" />
+
                     <div class="text">
-                        <h3>{{ slides[0].title }}</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <h3>{{ slide.title }}</h3>
+                        <p>{{ slide.text }}</p>
                     </div>
+                    
                 </div>
 
                 <!-- Pulsante destro -->
-                <button class="btn btn-primary ms-3">Right</button>
+                <button class="btn btn-primary ms-3"  @click="nextSlide">Right</button>
             </div>
         </div>
     </div>
